Fix button alignment.

--- a/mapaguarani/static/sass/_sidebar.scss
+++ b/mapaguarani/static/sass/_sidebar.scss
@@ -351,6 +351,6 @@
     }
   }
   &.menu-open {
-    left: 16.5px;
+    left: 16px;
   }
 }
